--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -1,7 +1,7 @@
 .skills {
   padding: 4rem 2rem;
   max-width: 1200px;
-  margin: 0 auto;
+  margin: auto;
 }
 
 .title {
@@ -22,7 +22,7 @@
 
 .categoriesGrid > :first-child .skillsGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 2rem;
 }
 
