--- a/src/App.module.css
+++ b/src/App.module.css
@@ -1,3 +1,9 @@
+body {
+  font-family: 'Inconsolata', 'Titillium Web', serif;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
 .app {
   --primary-light: #ffffff;
   --secondary-light: rgb(244, 244, 244);
