--- a/src/components/Projects/Projects.module.css
+++ b/src/components/Projects/Projects.module.css
@@ -2,6 +2,11 @@
   padding: 4rem 2rem;
   max-width: 1200px;
   margin: 0 auto;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .title {
@@ -15,19 +20,23 @@
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr));
   gap: 2rem;
   margin-top: 2rem;
+  opacity: 0;
+  transform: translateY(20px);
 }
 
 .projectCard {
-  background: var(--secondary-light);
-  border-radius: 12px;
-  border: 5px solid rgba(255, 0, 0, 1);
+  background: rgba(0, 198, 255, 0.01);
+  border-radius: 15px;
+  box-shadow: 0 4px 20px rgba(52, 58, 64, 0.05);
+  -webkit-backdrop-filter: blur(10px);
+  backdrop-filter: blur(10px);
+  border: 1px solid rgba(52, 58, 64, 0.05);
   padding: 1.5rem;
   cursor: pointer;
   transition: transform 0.3s ease, box-shadow 0.3s ease;
-  height: 100%;
+  height: 20rem;
   display: flex;
   flex-direction: column;
-  position: relative;
   overflow: hidden;
 }
 
@@ -88,10 +97,6 @@
 }
 
 @keyframes fadeIn {
-  from {
-    opacity: 0;
-    transform: translateY(20px);
-  }
   to {
     opacity: 1;
     transform: translateY(0);
@@ -100,7 +105,11 @@
 
 /* Dark theme adjustments */
 :global(.dark) .projectCard {
-  background: var(--secondary-dark);
+  background: rgba(52, 58, 64, 0.2);
+  border-color: rgba(244, 244, 244, 0.05);
+}
+:global(.dark) .projectCard:hover {
+  box-shadow: 0 10px 25px rgba(244, 244, 244, 0.1);
 }
 
 :global(.dark) .projectCard h3 {
