--- a/src/components/Skills/Skills.module.css
+++ b/src/components/Skills/Skills.module.css
@@ -12,15 +12,15 @@
 
 .categoriesGrid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
   gap: 2rem;
 }
 
-.categoriesGrid > :first-child {
+/* .categoriesGrid > :first-child {
   grid-column: 1 / -1;
-}
+} */
 
-.categoriesGrid > :first-child .skillsGrid {
+.skillsGrid {
   display: grid;
   grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
   gap: 2rem;
